fix country errors

--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -2,6 +2,36 @@
   "type": "տիպ",
   "status": "կարգավիճակը",
   "price": "գինը",
+  "header": {
+    "real_state": "Անշարժ գույք",
+    "contact_us": "Կապ մեզ հետ",
+    "services": "Ծառայություններ",
+    "sign_in": "Մուտք գործել",
+    "logout": "դուրս գալ"
+  },
+  "home": {
+    "intro": {
+      "btnText": "Իմանալ ավելին",
+      "title": "Գտիր քո",
+      "subtitle": "Երազանքի տունը",
+      "text": "Երազած տուն Ավելի քան 10,000 հաճախորդ ամեն տարի մեզ հետ տուն է գնում կամ վաճառում"
+    },
+    "recommended": {
+      "titleForRent": "Լավագույն Հայտարարություններ վարձով",
+      "titleForSale": "Լավագույն Հայտարարություններ Վաճառք",
+      "btnText": "Տեսնել ամբողջը"
+    },
+    "byTypes": {
+      "title": "Ուսումնասիրել ըստ\n  Գույքի տեսակը",
+      "btnText": "Հասանելի Հայտարարություններ"
+    },
+    "contact_us": {
+      "tell": "Զանգահարեք օգնության համար հիմա:",
+      "btn": "կապվեք մեզ հետ",
+      "title": "Մեր ծառայությունների մասին լրացուցիչ տեղեկությունների համար <span class='text-primary'>կապվեք</span> մեր փորձագետ խորհրդատուների հետ",
+      "subtitle": "Ամեն օր 10 նոր առաջարկ: 350 առաջարկներ կայքում, վստահված հազարավոր օգտատերերի համայնքի կողմից:"
+    }
+  },
   "auth": {
     "email": {
       "required": "Էլեկտրոնային փոստը պարտադիր է",
@@ -22,6 +52,102 @@
     "password": {
       "required": "Գաղտնաբառը պարտադիր է",
       "invalid": "Գաղտնաբառը պետք է լինի առնվազն 8 նիշ"
+    }
+  },
+  "catalog": {
+    "filter": {
+      "region": "շրջան",
+      "title": "Գտիր քո տունը",
+      "city": "քաղաքներ",
+      "category": "կատեգորիա",
+      "status": "կատեգորիա",
+      "rooms": "կատեգորիա",
+      "baths": "լոգարան",
+      "areaSize": "Տարածքի չափ",
+      "from": "սկսած",
+      "to": "մինչև",
+      "price": "գին",
+      "search": "որոնել"
+    },
+    "founded": "Մենք գտանք <span class='text-primary'>{{count}}</span> Հայտարարություններ, որոնք հասանելի են ձեզ համար"
+  },
+  "singlePrd": {
+    "desc": "Նկարագրություն",
+    "facts": "Փաստեր և առանձնահատկություններ",
+    "property_id": "Գույքի ID",
+    "property_type": "Գույքի տեսակ",
+    "floors_count": "Հարկերի հաշվում",
+    "plot_area": "Հողամասի տարածք",
+    "property_status": "Գույքի կարգավիճակ",
+    "current_floor": "Ընթացիկ հարկ",
+    "ceiling_height": "Առաստաղի բարձրություն",
+    "building_type": "Շենքի տեսակ",
+    "amenities": "Հարմարություններ",
+    "furniture": "կահույք",
+    "elevator": "Վերելակ",
+    "newBuilding": "Նորակառույց",
+    "balcony": "պատշգամբ",
+    "similar": "Նման տներ, որոնք կարող եք հավանել",
+    "active": "Ակտիվ",
+    "details": "Լրացուցիչ մանրամասներ"
+  },
+  "contactus": {
+    "title": "Մեր ծառայությունների մասին լրացուցիչ տեղեկությունների համար կապ հաստատեք մեր փորձագետ խորհրդատուների հետ: Մենք միշտ ցանկանում ենք լսել ձեզնից!",
+    "submitBtn": "հաստատել",
+    "first_name": "Անուն",
+    "last_name": "Ազգանուն",
+    "your_email": "Ձեր էլ.փոստը",
+    "your_phone": "Դու հեռախոս",
+    "message": "հաղորդագրություն",
+    "contact": "Contact",
+    "office": "գրասենյակ",
+    "mobile": "բջջային",
+    "email": "E-mail",
+    "time_hour": "Աշխատանքի ժամ",
+    "mon_fr": "Երկուշաբթի - ուրբաթ:",
+    "sun_sat": "Կիրակի և շաբաթ."
+  },
+  "services": {
+    "intro": {
+      "title": "House to Home գույքային գործակալություն է, որն օգնում է մարդկանց ապրել ավելի մտածված և գեղեցիկ ձևերով"
+    },
+    "content": {
+      "title": "Առաջարկվող ծառայություններ",
+      "subtitle": "Համապարփակ լուծումներ ձեր բիզնեսի կարիքների համար\\nՄեր փորձագետների թիմը տրամադրում է մի շարք ծառայություններ, որոնք հարմարեցված են ձեր բիզնեսի հատուկ կարիքներին: Ռազմավարական պլանավորումից մինչև մարքեթինգ և գովազդ, մենք ձեզ ծածկում ենք: Մեր համապարփակ լուծումները նախատեսված են օգնել ձեզ հասնել ձեր նպատակներին և զարգացնել ձեր բիզնեսը",
+      "property_management": {
+        "title": "Գույքի կառավարում",
+        "subtitle": "Պրոֆեսիոնալ կառավարման ծառայություններ գույքի սեփականատերերի համար\nՄեր գույքի կառավարման թիմը տրամադրում է պրոֆեսիոնալ կառավարման ծառայություններ գույքի սեփականատերերի համար: Մենք հոգում ենք ձեր գույքի կառավարման բոլոր ասպեկտները, ներառյալ վարձակալների զննում, վարձավճարների հավաքագրում, գույքի պահպանում և այլն: Թույլ տվեք մեզ կարգավորեք մանրամասները, որպեսզի կարողանաք կենտրոնանալ ձեր այլ ներդրումների վրա"
+      },
+      "mortgage_service": {
+        "title": "Հիփոթեքային ծառայություն",
+        "subtitle": "Հիփոթեքային համալիր լուծումներ բնակարանների գնորդների համար\\nՄեր հիփոթեքային ծառայությունների թիմը տրամադրում է համապարփակ հիփոթեքային լուծումներ բնակարանների գնորդների համար: Անկախ նրանից, թե դուք առաջին անգամ գնորդ եք, թե փորձառու բնակարանատեր, մենք կարող ենք օգնել ձեզ գտնել ճիշտ հիփոթեքային ապրանք, որը կհամապատասխանի ձեր եզակի կարիքներին: և բյուջեն"
+      },
+      "consulting_service": {
+        "title": "Խորհրդատվական ծառայություն",
+        "subtitle": "Ձեր բիզնեսի փոխակերպումը հարմարեցված խորհրդատվական ծառայությունների միջոցով. արդյունաբերության պատկերացումների, տվյալների վերլուծության և նորարար ռազմավարությունների օգտագործում՝ աճը խթանելու, արդյունավետությունը բարձրացնելու և մրցակցային առավելությունները բարձրացնելու համար"
+      },
+      "home_buying": {
+        "title": "Տան գնում",
+        "subtitle": "Իրականություն դարձրեք տան սեփականության մասին ձեր երազանքը. տան գնման համապարփակ ծառայություններ, որոնք նախատեսված են ձեզ առաջնորդելու գործընթացի յուրաքանչյուր քայլում՝ ֆինանսական պլանավորումից մինչև գույքի որոնում և փակում"
+      },
+      "home_selling": {
+        "title": "Տուն վաճառք",
+        "subtitle": "Մաքսիմալացնելով ձեր ներդրումների եկամտաբերությունը. տների վաճառքի պրոֆեսիոնալ ծառայություններ, որոնք օգտագործում են առաջադեմ շուկայավարման տեխնիկա, գնագոյացման վերլուծություն և հմուտ բանակցություններ՝ ապահովելու ձեր գույքի հարթ և շահավետ վաճառքը"
+      },
+      "escrow_services": {
+        "title": "Պահպանման ծառայություններ",
+        "subtitle": "Անվտանգ և արդյունավետ գործարքների կառավարում. վստահելի պահուստային ծառայություններ՝ նպաստելու միջոցների և փաստաթղթերի փոխանակմանը, հոգեկան հանգստություն ապահովելով ինչպես գնորդների, այնպես էլ վաճառողների և ծառայություններ մատուցողների համար"
+      }
+    },
+    "form": {
+      "title": "Ունե՞ք առաջիկա անշարժ գույքի գործարք?",
+      "subtitle": "Փորձագիտական աջակցություն ձեր հաջորդ անշարժ գույքի գործարքի համար. համապարփակ ծառայություններ և անհատականացված աջակցություն, որոնք կօգնեն ձեզ վստահորեն և հաջողությամբ նավարկելու անշարժ գույք գնելու կամ վաճառելու բարդությունները",
+      "submitBtn": "հաստատել",
+      "first_name": "Անուն",
+      "last_name": "Ազգանուն",
+      "your_email": "Ձեր էլ.փոստը",
+      "your_phone": "Դու հեռախոս",
+      "message": "հաղորդագրություն"
     }
   }
 }
