--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -2,6 +2,36 @@
   "type": "тип",
   "status": "статус",
   "price": "цена",
+  "header": {
+    "real_state": "Недвижимость",
+    "contact_us": "Свяжитесь с нами",
+    "services": "Услуги",
+    "sign_in": "ВОЙТИ",
+    "logout": "выйти"
+  },
+  "home": {
+    "intro": {
+      "title": "Найдите дом",
+      "subtitle": "своей мечты",
+      "text": "Дом мечты Более 10 000 клиентов ежегодно покупают или продают дом у нас",
+      "btnText": "Узнать больше"
+    },
+    "recommended": {
+      "titleForRent": "Лучшая недвижимость в аренду",
+      "titleForSale": "Лучшая недвижимость на продажу",
+      "btnText": "Просмотреть все"
+    },
+    "byTypes": {
+      "title": "Исследуйте по\n  Тип недвижимости",
+      "btnText": "Доступные недвижимости"
+    },
+    "contact_us": {
+      "btn": "связаться с нами",
+      "tell": "Позовите на помощь прямо сейчас!",
+      "title": "Чтобы получить дополнительную информацию о наших услугах, <span class='text-primary'>свяжитесь</span> с нашими опытными консультантами",
+      "subtitle": "10 новых предложений каждый день. 350 предложений на сайте, которым доверяют тысячи пользователей."
+    }
+  },
   "auth": {
     "email": {
       "required": "Требуется электронная почта",
@@ -22,6 +52,102 @@
     "password": {
       "required": "Требуется пароль",
       "invalid": "Пароль должен быть не менее 8 символов"
+    }
+  },
+  "catalog": {
+    "filter": {
+      "region": "район",
+      "title": "Найди свой дом",
+      "city": "города",
+      "category": "категория",
+      "status": "статус",
+      "rooms": "комнаты",
+      "baths": "ванная комната",
+      "areaSize": "Размер области",
+      "from": "от",
+      "to": "до",
+      "price": "цена",
+      "search": "поиск"
+    },
+    "founded": "Мы нашли свойства <span class='text-primary'>{{count}}</span> недвижимости, доступные для вас"
+  },
+  "singlePrd": {
+    "active": "Активный",
+    "desc": "Описание",
+    "facts": "Факты и особенности",
+    "property_id": "Идентификатор свойства",
+    "property_type": "Тип свойства",
+    "floors_count": "Количество этажей",
+    "plot_area": "Участок",
+    "property_status": "Статус объекта",
+    "current_floor": "Текущий этаж",
+    "ceiling_height": "Высота потолка",
+    "building_type": "Тип здания",
+    "amenities": "Удобства",
+    "furniture": "мебель",
+    "elevator": "Лифт",
+    "newBuilding": "Новое здание",
+    "balcony": "балкон",
+    "similar": "Похожие дома, которые могут вам понравиться",
+    "details": "дополнительные детали"
+  },
+  "contactus": {
+    "title": "Для получения дополнительной информации о наших услугах свяжитесь с нашими опытными консультантами. Мы всегда рады услышать от вас!",
+    "submitBtn": "подтверждать",
+    "first_name": "Имя",
+    "last_name": "Фамилия",
+    "your_email": "Ваш адрес электронной почты",
+    "your_phone": "Твой телефон",
+    "message": "сообщение",
+    "contact": "Контакт",
+    "office": "офис",
+    "mobile": "мобильный",
+    "email": "Электронная почта",
+    "time_hour": "Час работы",
+    "mon_fr": "Понедельник - Пятница:",
+    "sun_sat": "Воскресенье и суббота:"
+  },
+  "services": {
+    "intro": {
+      "title": "House to Home — это агентство недвижимости, которое помогает людям жить более продуманно и красиво."
+    },
+    "content": {
+      "title": "Предлагаемые услуги",
+      "subtitle": " Комплексные решения для нужд вашего бизнеса\nНаша команда экспертов предоставляет ряд услуг, адаптированных к конкретным потребностям вашего бизнеса. От стратегического планирования до маркетинга и рекламы мы предоставим вам все необходимое. Наши комплексные решения предназначены для помочь вам достичь ваших целей и развивать свой бизнес.",
+      "property_management": {
+        "title": "Управление недвижимостью",
+        "subtitle": "Профессиональные услуги по управлению для владельцев недвижимости\nНаша команда по управлению недвижимостью предоставляет профессиональные услуги по управлению для владельцев недвижимости. Мы позаботимся обо всех аспектах управления вашей собственностью, включая проверку арендаторов, сбор арендной платы, обслуживание собственности и многое другое. Позвольте нам обработайте детали, чтобы вы могли сосредоточиться на других своих инвестициях."
+      },
+      "mortgage_service": {
+        "title": "Ипотечный сервис",
+        "subtitle": "Комплексные ипотечные решения для покупателей жилья\nНаша команда ипотечного обслуживания предлагает комплексные ипотечные решения для покупателей жилья. Независимо от того, покупаете ли вы жилье впервые или уже являетесь домовладельцем, мы можем помочь вам найти правильный ипотечный продукт, соответствующий вашим уникальным потребностям. и бюджет."
+      },
+      "consulting_service": {
+        "title": "Консалтинговая служба",
+        "subtitle": "Преобразование вашего бизнеса с помощью специализированных консультационных услуг: использование отраслевых знаний, анализа данных и инновационных стратегий для стимулирования роста, повышения эффективности и усиления конкурентных преимуществ"
+      },
+      "home_buying": {
+        "title": "Покупка дома",
+        "subtitle": "Воплощение вашей мечты о собственности на дом: комплексные услуги по покупке жилья, призванные помочь вам на каждом этапе процесса, от финансового планирования до поиска и закрытия сделки"
+      },
+      "home_selling": {
+        "title": "Продажа дома",
+        "subtitle": "Максимизация возврата инвестиций: профессиональные услуги по продаже жилья, в которых используются передовые маркетинговые методы, анализ цен и квалифицированные переговоры для обеспечения беспрепятственной и прибыльной продажи вашей собственности"
+      },
+      "escrow_services": {
+        "title": "Услуги условного депонирования",
+        "subtitle": "Безопасное и эффективное управление транзакциями: надежные услуги условного депонирования для облегчения обмена средствами и документацией, обеспечения спокойствия для покупателей, продавцов и поставщиков услуг"
+      }
+    },
+    "form": {
+      "title": "У вас есть предстоящая сделка с недвижимостью?",
+      "subtitle": "Экспертная помощь для вашей следующей сделки с недвижимостью: комплексные услуги и индивидуальная поддержка, которые помогут вам уверенно и успешно справиться со сложностями покупки или продажи недвижимости",
+      "submitBtn": "подтверждать",
+      "first_name": "Имя",
+      "last_name": "Фамилия",
+      "your_email": "Ваш адрес электронной почты",
+      "your_phone": "Твой телефон",
+      "message": "сообщение"
     }
   }
 }
