--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -2,6 +2,37 @@
   "type": "type",
   "status": "status",
   "price": "price",
+  "header": {
+    "real_state": "Real Estates",
+    "contact_us": "Contact Us",
+    "services": "Services",
+    "sign_in": "SIGN IN",
+    "logout": "logout",
+    "btnText": "Find out more"
+  },
+  "home": {
+    "intro": {
+      "btnText": "Find out more",
+      "title": "Find Your",
+      "subtitle": "Dream Home",
+      "text": "Dream home Than 10,000 customers buy or sell a home with us each year"
+    },
+    "recommended": {
+      "titleForRent": "Best Properties For Rent",
+      "titleForSale": "Best Properties For Sale",
+      "btnText": "See all properties"
+    },
+    "byTypes": {
+      "title": "Explore by \n Property Type",
+      "btnText": "Available Properties"
+    },
+    "contact_us": {
+      "btn": "contact us",
+      "tell": "Call for help now!",
+      "title": "For more information about our services, <span class='text-primary'>get it touch</span> with our expert consultants",
+      "subtitle": "10 new offers every day. 350 offers on site, Trusted by a community of thousands of users."
+    }
+  },
   "auth": {
     "email": {
       "required": "Email is required",
@@ -22,6 +53,102 @@
     "password": {
       "required": "Password is required",
       "invalid": "Password must be at least 8 characters"
+    }
+  },
+  "catalog": {
+    "filter": {
+      "title": "Find your home",
+      "city": "cities",
+      "region": "district",
+      "category": "category",
+      "status": "status",
+      "rooms": "rooms",
+      "baths": "baths",
+      "areaSize": "Area Size",
+      "from": "from",
+      "to": "to",
+      "price": "price",
+      "search": "search"
+    },
+    "founded": "We found <span class='text-primary'>{{count}}</span> properties available for you"
+  },
+  "singlePrd": {
+    "active": "active",
+    "desc": "Description",
+    "facts": "Facts and Features",
+    "property_id": "Property ID",
+    "property_type": "Property type",
+    "floors_count": "Floors count",
+    "plot_area": "Plot Area",
+    "property_status": "Property status",
+    "current_floor": "Current Floor",
+    "ceiling_height": "Ceiling Height",
+    "building_type": "Building Type",
+    "amenities": "Amenities",
+    "furniture": "furniture",
+    "elevator": "Elevator",
+    "newBuilding": "New Building",
+    "balcony": "balcony",
+    "similar": "Similar Homes You May Like",
+    "details": "Additional Details"
+  },
+  "contactus": {
+    "title": "For more information about our services, get in touch with our expert consultants. We're always eager to hear from you!",
+    "submitBtn": "հաստատել",
+    "first_name": "First name",
+    "last_name": "Last Name",
+    "your_email": "Your E-mail",
+    "your_phone": "You Phone",
+    "message": "message",
+    "contact": "Contact",
+    "office": "office",
+    "mobile": "mobile",
+    "email": "E-mail",
+    "time_hour": "Hour of operation",
+    "mon_fr": "Monday - Friday:",
+    "sun_sat": "Sunday & Saturday:"
+  },
+  "services": {
+    "intro": {
+      "title": "House to Home is an estate agency that helps people live in more thoughtful and beautiful ways."
+    },
+    "content": {
+      "title": "Services Offered",
+      "subtitle": " Comprehensive Solutions for Your Business Needs\nOur team of experts provides a range of services tailored to meet the specific needs of your business. From strategic planning to marketing and advertising, we have you covered. Our comprehensive solutions are designed to help you achieve your goals and grow your business.",
+      "property_management": {
+        "title": "Property Management",
+        "subtitle": "Professional Management Services for Property Owners\nOur property management team provides professional management services for property owners. We take care of all aspects of managing your property, including tenant screening, rent collection, property maintenance, and more. Let us handle the details so you can focus on your other investments."
+      },
+      "mortgage_service": {
+        "title": "Mortgage Service",
+        "subtitle": "Comprehensive Mortgage Solutions for Homebuyers\nOur mortgage service team provides comprehensive mortgage solutions for homebuyers. Whether you're a first-time homebuyer or an experienced homeowner, we can help you find the right mortgage product to fit your unique needs and budget."
+      },
+      "consulting_service": {
+        "title": "Consulting Service",
+        "subtitle": "Transforming Your Business through Tailored Consulting Services: Leveraging Industry Insights, Data Analysis, and Innovative Strategies to Drive Growth, Increase Efficiency, and Enhance Competitive Advantage"
+      },
+      "home_buying": {
+        "title": "Home Buying",
+        "subtitle": "Making Your Dream of Home ownership a Reality: Comprehensive Home Buying Services Designed to Guide You through Every Step of the Process, from Financial Planning to Property Search and Closing"
+      },
+      "home_selling": {
+        "title": "Home Selling",
+        "subtitle": "Maximizing Your Return on Investment: Professional Home Selling Services that Utilize Advanced Marketing Techniques, Pricing Analysis, and Skilled Negotiation to Ensure a Smooth and Profitable Sale of Your Property"
+      },
+      "escrow_services": {
+        "title": "Escrow Services",
+        "subtitle": "Secure and Efficient Transaction Management: Trustworthy Escrow Services to Facilitate the Exchange of Funds and Documentation, Providing Peace of Mind for Buyers, Sellers, and Service Providers Alike"
+      }
+    },
+    "form": {
+      "title": "Do You Have An Upcoming Real Estate Transaction?",
+      "subtitle": "Expert Assistance for Your Next Real Estate Transaction: Comprehensive Services and Personalized Support to Help You Navigate the Complexities of Buying or Selling Property with Confidence and Success",
+      "submitBtn": "հաստատել",
+      "first_name": "Անուն",
+      "last_name": "Ազգանուն",
+      "your_email": "Ձեր էլ.փոստը",
+      "your_phone": "Դու հեռախոս",
+      "message": "հաղորդագրություն"
     }
   }
 }
