fix translate errors

--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -89,7 +89,13 @@
     "balcony": "պատշգամբ",
     "similar": "Նման տներ, որոնք կարող եք հավանել",
     "active": "Ակտիվ",
-    "details": "Լրացուցիչ մանրամասներ"
+    "details": "Լրացուցիչ մանրամասներ",
+    "recommended": {
+      "house": "Նման տներ, որոնք ձեզ կարող են դուր գալ",
+      "office": "Նման գրասենյակներ, որոնք կարող են ձեզ դուր գալ",
+      "land": "Նման երկրներ, որոնք կարող են ձեզ դուր գալ",
+      "apartment": "Նմանատիպ բնակարաններ, որոնք ձեզ դուր կգան"
+    }
   },
   "contactus": {
     "title": "Մեր ծառայությունների մասին լրացուցիչ տեղեկությունների համար կապ հաստատեք մեր փորձագետ խորհրդատուների հետ: Մենք միշտ ցանկանում ենք լսել ձեզնից!",
