--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -89,7 +89,13 @@
     "newBuilding": "Новое здание",
     "balcony": "балкон",
     "similar": "Похожие дома, которые могут вам понравиться",
-    "details": "дополнительные детали"
+    "details": "дополнительные детали",
+    "recommended": {
+      "house": "Похожие дома, которые могут вам понравиться",
+      "office": "Похожие офисы, которые могут вам понравиться",
+      "land": "Похожие страны, которые могут вам понравиться",
+      "apartment": "Похожие квартиры, которые могут вам понравиться"
+    }
   },
   "contactus": {
     "title": "Для получения дополнительной информации о наших услугах свяжитесь с нашими опытными консультантами. Мы всегда рады услышать от вас!",
