--- a/public/locales/am/common.json
+++ b/public/locales/am/common.json
@@ -89,7 +89,8 @@
     "balcony": "պատշգամբ",
     "similar": "Նման տներ, որոնք կարող եք հավանել",
     "active": "Ակտիվ",
-    "details": "Լրացուցիչ մանրամասներ"
+    "details": "Լրացուցիչ մանրամասներ",
+    "dynamicDesc": "<span>{{type}}</span> <span>{{address}}</span> <span>{{buildingType}}</span>, <span>{{isOnFloor}}</span> <span>{{floorsCount}}</span> հարկանի քարե շենքի <span>{{floorArea}}</span> քմ ընդհանուր մակերեսով, <span>{{isHasElevator}} '?'</span> <span>{{rooms}}</span> սենյակ, <span>{{baths}}</span> սանհանգույց կոմունալ բոլոր հարմարություններով։ <span>{{isHasFurniture}}</span>։ Լրացուցիչ տեղեկությունների համար զանգահարել՝"
   },
   "contactus": {
     "title": "Մեր ծառայությունների մասին լրացուցիչ տեղեկությունների համար կապ հաստատեք մեր փորձագետ խորհրդատուների հետ: Մենք միշտ ցանկանում ենք լսել ձեզնից!",
