--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -96,7 +96,14 @@
       "office": "Such Offices You May Like",
       "land": "Lands You Might Like",
       "apartment": "Similar Apartments You'll Like"
-    }
+    },
+    "isHas": {
+      "elevator": "has elevator",
+      "inFloor": "on the <span>{{currentFloor}}</span>th floor",
+      "isNewBuilding": "of a newly built",
+      "isHasFurniture": "Furniture and equipment completely new. "
+    },
+    "dynamicDesc": "<span>{{type}}</span> <span>{{address}}</span> <span>{{isOnFloor}}</span>, <span>{{isNewBuilding}}</span> <span>{{floorsCount}}</span>-story building with a total area of <span>{{floorArea}}</span> square meters, <span>{{isHasElevator}}</span> <span>{{rooms}}</span> rooms, <span>{{baths}}</span> baths with all utilities. <span>{{isHasFurniture}}</span> For more information call"
   },
   "contactus": {
     "title": "For more information about our services, get in touch with our expert consultants. We're always eager to hear from you!",
